# zero-to-production

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
docs/: ch_01.md  ch_02.md  ch_03.md  ch_04.md  ch_05.md  ch_06.md  ch_07.md  ch_08.md  ch_09.md  ch_10.md  ch_11.md  qa.md  todo.md
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
